tests/baselines/reference/parser_continueTarget5.errors.txt
parser_continueTarget5.ts(5,7): error TS18055: Cannot find label 'target'.


==== parser_continueTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS18055: Cannot find label 'target'.
        }
      }
    }